división por archivos terminada

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,8 @@
 {
     "files.encoding": "iso885915",
+    "files.associations": {
+        "primeraentrega.h": "c",
+        "matrizdinamica.h": "c"
+    },
 
 }
